# revised-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  test.cpp
app/: main.cpp
grammer/: ebnf.txt
include/codeanalysis/: Binder.hpp  BoundExpressionNode.hpp  BoundNodeKind.hpp  BoundNodePrinter.hpp  BoundScope.hpp  Conversion.hpp  Environment.hpp  Evaluator.hpp  ExpressionSyntax.hpp  GenScope.hpp  Generator.hpp  Lexer.hpp  Lower.hpp  Parser.hpp  Symbol.hpp  SyntaxKind.hpp  SyntaxTree.hpp  Types.hpp  VariableSymbol.hpp
include/codeanalysis/binder/: Binder.hpp  BoundScope.hpp
include/codeanalysis/binder/utils/: BoundExpressionNode.hpp  BoundNodeKind.hpp  BoundProgram.hpp
include/codeanalysis/evaluator/: Environment.hpp  Evaluator.hpp
include/codeanalysis/lexer/: Lexer.hpp
include/codeanalysis/lower/: Lower.hpp
include/codeanalysis/parser/: Parser.hpp
include/codeanalysis/parser/utils/: ExpressionSyntax.hpp  SyntaxKind.hpp
include/codeanalysis/printer/: BoundNodePrinter.hpp
include/codeanalysis/utils/: Conversion.hpp  Symbol.hpp  SyntaxTree.hpp  Types.hpp
llvm_ir/: main13.txt  main14.txt  main4.txt
source_file/: main.txt  main1.txt  main10.txt  main11.txt  main12.txt  main13.txt  main14.txt  main2.txt  main3.txt  main4.txt  main5.txt  main6.txt  main7.txt  main8.txt  main9.txt
src/: Binder.cpp  BoundExpressionNode.cpp  BoundNodePrinter.cpp  Evaluator.cpp  ExpressionSyntax.cpp  GenScope.cpp  Generator.cpp  Lexer.cpp  Lower.cpp  Parser.cpp  Symbol.cpp  SyntaxTree.cpp
test_cases/: test_case1.txt  test_case2.txt  test_case3.txt  test_case4.txt  test_case5.txt
